# add2

./: .gitignore  CMakeLists.txt  README.md  run_jit.py  run_time.py  setup.py  test_setup.py
add2.egg-info/: PKG-INFO  SOURCES.txt
include/: add2.h
kernel/: add2_kernel.cu  add2_ops.cpp
